platform/overlays/minikube/api-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: api
  labels:
    istio-injection: enabled
spec: {}
status: {}
