platform/overlays/minikube/frontend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: frontend
  annotations:
    istio-injection: enabled
spec: {}
status: {}
