platform/overlays/minikube/tracker-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tracker-frontend
  name: tracker-frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-frontend
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: tracker-frontend
    spec:
      containers:
      - image: gcr.io/track-compliance/frontend
        name: frontend
        ports:
        - containerPort: 3000
        resources: {}
status: {}
