platform/overlays/minikube/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: postgres
  name: postgres
  namespace: api
spec:
  ports:
  - name: tcp-5432
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
status:
  loadBalancer: {}
