platform/overlays/minikube/tracker-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tracker-api
  name: tracker-api
  namespace: api
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: tracker-api
  type: ClusterIP
status:
  loadBalancer: {}
