platform/overlays/minikube/istio-authentication-policy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-dr
  namespace: api
spec:
  host: "*.api.svc.cluster.local" #only affects requests to the api namespace
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-dr
  namespace: frontend
spec:
  host: "*.frontend.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
